alignment fixes

--- a/src/style.css
+++ b/src/style.css
@@ -145,6 +145,8 @@
 
     .cellarWineList ul {
         list-style: none;
+        align-self: center;
+        padding-left: 0;
     }
 
     .bottomCellarContainer {
